--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "build/main.js",
 	"types": "build/main.d.ts",
 	"scripts": {
-		"build": "tsc && node fuse.js",
+		"build": "tsc",
 		"test": "mocha -r ts-node/register tests/**/*.ts",
 		"benchmark": "node benchmarks/*.js"
 	},
@@ -26,7 +26,6 @@
 		"stream-mock": "^2.0.5",
 		"ts-node": "^8.3.0",
 		"typescript": "^3.5.3",
-		"fuse-box": "^3.7.1",
 		"terser": "^4.2.0",
 		"uglify-js": "^3.6.0"
 	},
