--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	"devDependencies": {
 		"@types/chai": "^4.2.0",
 		"@types/mocha": "^5.2.7",
-		"@types/node": "^12.7.2",
 		"benchmark": "^2.1.4",
 		"chai": "^4.2.0",
 		"microtime": "^3.0.0",
@@ -29,5 +28,7 @@
 		"terser": "^4.2.0",
 		"uglify-js": "^3.6.0"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"@types/node": "^12.7.2"
+	}
 }
